# wizbang

./: wizbang.cabal
app/: Main.hs
data/: WIZ1.DSK
doc/: reversed.txt
src/: Lib.hs
