name:                wizbang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README
homepage:            https://github.com/githubuser/wizbang#readme
license:             GPL
license-file:        LICENSE
author:              Oblivia Simplex
maintainer:          oblivia@paranoici.org
copyright:           Oblivia Simplex, 2016
category:            Hacks
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       base
                     , binary
                     , bytestring
                     , regex-pcre
                     

executable wizbang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wizbang
                     , binary
                     , bytestring
  default-language:    Haskell2010

test-suite wizbang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wizbang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wizbang
